<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Matchweek-->
        <View
            android:id="@+id/gradient_matchweek"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/gradient_purple_pink"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_matchweek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/gradient_matchweek"
            app:layout_constraintBottom_toTopOf="@id/rv_matchweek">

            <TextView
                android:id="@+id/tv_matchweek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/matchweek"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon_pl_matchweek"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/icon_pl_matchweek"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="12dp"
                android:src="@drawable/ic_premier_head_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_matchweek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_matchday"
            app:layout_constraintTop_toBottomOf="@id/title_matchweek"/>

        <!--Table-->
        <View
            android:id="@+id/gradient_table"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/gradient_purple_pink"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/rv_matchweek"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/gradient_table"
            app:layout_constraintBottom_toTopOf="@id/header_table">

            <TextView
                android:id="@+id/tv_title_table"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/league_table"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon_pl"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/icon_pl"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="12dp"
                android:src="@drawable/ic_premier_head_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/title_table">

            <TextView
                android:id="@+id/tv_pos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/pos"
                app:layout_constraintWidth_percent="0.1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="44dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/club"
                app:layout_constraintStart_toEndOf="@id/tv_pos"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_play"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/p"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintStart_toEndOf="@id/tv_team"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_gd"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_gd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/gd"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintStart_toEndOf="@id/tv_play"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_point"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/pts"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_table_home"
            tools:itemCount="5"
            app:layout_constraintTop_toBottomOf="@id/header_table"/>

        <!--Player-->
        <View
            android:id="@+id/gradient_player"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/gradient_purple_pink"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/rv_table"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/gradient_player"
            app:layout_constraintBottom_toTopOf="@id/layout_player">

            <TextView
                android:id="@+id/tv_title_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/featured_player"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon_pl_player"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/icon_pl_player"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="12dp"
                android:src="@drawable/ic_premier_head_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/title_player">

            <ImageView
                android:id="@+id/iv_player"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintDimensionRatio="1.0"
                android:scaleType="fitCenter"
                android:src="@drawable/placeholder_player"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_name_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_player"
                app:layout_constraintTop_toTopOf="@id/iv_player"
                app:layout_constraintBottom_toTopOf="@id/iv_team_player"
                tools:text="@string/app_name" />

            <ImageView
                android:id="@+id/iv_team_player"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginVertical="4dp"
                app:layout_constraintDimensionRatio="1.0"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_premier_head_24dp"
                app:layout_constraintStart_toStartOf="@id/tv_name_player"
                app:layout_constraintTop_toBottomOf="@id/tv_name_player"
                app:layout_constraintBottom_toTopOf="@id/tv_position_player"/>

            <TextView
                android:id="@+id/tv_team_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_team_player"
                app:layout_constraintTop_toTopOf="@id/iv_team_player"
                app:layout_constraintBottom_toBottomOf="@id/iv_team_player"
                tools:text="2019" />

            <TextView
                android:id="@+id/tv_position_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_team_player"
                app:layout_constraintTop_toBottomOf="@id/iv_team_player"
                app:layout_constraintBottom_toBottomOf="@id/iv_player"
                tools:text="2019" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>