<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/activity_player_scene"
    tools:context=".ui.detail.player.PlayerActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintBottom_toBottomOf="@id/scroll_view"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/purple" />

    <View
        android:id="@+id/iv_background_collapsed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_dark"
        app:layout_constraintTop_toTopOf="@id/iv_background"
        app:layout_constraintBottom_toBottomOf="@id/iv_background"/>

    <ImageView
        android:id="@+id/home_no_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:src="@drawable/abc_ic_ab_back_material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/iv_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="0.7"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_player" />

    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1.3"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_premier_head_24dp" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_player"
        tools:text="14" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/iv_team"
        android:layout_width="20dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.0"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_premier_head_24dp" />

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="2019" />

    <TextView
        android:id="@+id/tv_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_team"
        tools:text="2019" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:tint="@color/white"
        app:backgroundTint="@color/red"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_dark"
        app:layout_constraintTop_toBottomOf="@id/iv_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:src="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/personal_details"/>

        <TextView
            android:id="@+id/tv_follow_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Visit Manchester City"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="8dp"
            android:padding="12dp"
            android:src="@drawable/ic_icons8_facebook_f"
            android:background="@drawable/bg_circle"
            android:backgroundTint="#1474EA"
            android:visibility="gone"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintDimensionRatio="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follow_player"
            app:layout_constraintEnd_toStartOf="@id/btn_twitter"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_twitter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:padding="12dp"
            android:tint="@color/white"
            android:background="@drawable/bg_circle"
            android:backgroundTint="#28AEFF"
            android:src="@drawable/ic_icons8_twitter"
            android:visibility="gone"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintDimensionRatio="1.0"
            app:layout_constraintStart_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintEnd_toStartOf="@id/btn_instagram"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_instagram"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:padding="12dp"
            android:tint="@color/white"
            android:background="@drawable/bg_instagram"
            android:src="@drawable/ic_icons8_instagram"
            android:visibility="gone"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintDimensionRatio="1.0"
            app:layout_constraintStart_toEndOf="@id/btn_twitter"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="parent"/>

         <TextView
            android:id="@+id/personal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/personal_details"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_instagram"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:src="@color/white"
            app:layout_constraintTop_toBottomOf="@id/personal_details"
            app:layout_constraintBottom_toBottomOf="@id/tv_weight"/>

        <TextView
            android:id="@+id/location_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/location_of_birth"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_details"/>

        <TextView
            android:id="@+id/tv_location_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_birth"
            tools:text="@string/nickname"/>

        <TextView
            android:id="@+id/nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/nationality"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location_birth"/>

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nationality"
            tools:text="@string/nickname"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/age"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nationality" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/age"
            tools:text="@string/nickname"/>

        <TextView
            android:id="@+id/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_age"/>

        <TextView
            android:id="@+id/tv_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/date_of_birth"
            tools:text="@string/nickname"/>

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/height"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_of_birth"/>

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/height"
            tools:text="@string/nickname"/>

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/weight"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_height"/>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/weight"
            tools:text="@string/nickname"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--<androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_background">


    </androidx.core.widget.NestedScrollView>-->

</androidx.constraintlayout.motion.widget.MotionLayout>